sandbox/output
GildedRoseTest.java:331: error: cannot find symbol
            .filter(GildedRose.isSellInBetween5And10())
                              ^
  symbol:   method isSellInBetween5And10()
  location: class GildedRose
1 error
